testing the git

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="icon" href="">
     </head>
     <body>
-        <h1>Test</h1> 
+        <h1>Welcome</h1>
+        <p>Test git 2</p> 
     </body>
     <script src=""></script>
 </html>
