--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <title>Gleb's Site</title>
-        <link rel="icon" href="">
+        <meta charset="UTF-8"/>
+        <title>Gleb's template</title>
+        <link rel="icon" type="image/x-icon" href="/img/icons/Partialinvis.gif">
     </head>
     <body>
-        <h1>Welcome</h1>
-        <p>Test git 2</p> 
+        <h1 title="I'm a Welcome">Welcome</h1>
+        <h2>h2</h2>
+        <h3>h3</h3>
+        <h4>h4</h4>
+        <h5>h6</h5>
+        <h6>h6</h6>
+        <p>Test git 2</p>
+        <hr>
+        <a href="https://www.google.com">google</a>
+        <hr>
+        <br>hey</br>
+        <hr>
+        <img src="/img/icons/Partialinvis.gif" alt="eye" width="100" height="100">
+        <br></br>
+        <pre>
+dede
+        dede
+            Hey
+            Hello
+            testing
+                test
+        </pre>
+        <strong>Important test very</strong>
+        <br>
+        <i>Italic</i>
+        <br>
+        <em>very nice???</em>
+        <br>
+        <mark>Am i marked?</mark>
+        <br>
+        <small>I'm small boy</small>
+        <br>
+        <del>I'm dell</del>
+        <br>
+        <ins>Inserted</ins>
+        <br>
+        <sub>I'm subsciprt</sub>
+        <br>
+        <sup>I'm superman</sup>
+        <br>
+        <blockquote>blockquote</blockquote>
+        <br>
+        <q>i'm a quote very good</q>
+        <br>
+        <abbr title="Abbr">I'm a abbreviation</abbr>
+        <br>
+        <address>Address: Joe's street</address>
+        <br>
+        <cite>I'm citing something</cite>
+        <br>
+        <bdo title="bdo tag" dir="rtl">I'm a bi-directional override</bdo>
+        <br>
+        <!--I'm a comment-->
+        <br>
+        <!--I'm at colors-->
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </body>
     <script src=""></script>
 </html>
